--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
+    "socket.io-client": "^4.5.4",
     "style-loader": "^1.3.0",
     "tinymce": "4.5.7",
     "tslib": "^2.3.1",
